--- a/RSSReader/Base.lproj/Main.storyboard
+++ b/RSSReader/Base.lproj/Main.storyboard
@@ -135,10 +135,10 @@
             </objects>
             <point key="canvasLocation" x="-110.14492753623189" y="103.79464285714285"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="P9g-j1-Owq">
             <objects>
-                <viewController id="Jto-BT-gZZ" sceneMemberID="viewController">
+                <viewController id="Jto-BT-gZZ" customClass="SettingsViewController" customModule="RSSReader" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kvM-uf-cqZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
